fix css appearance to make it display four images per line and left-aligned

--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,8 @@ header {
 .displayResults {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: left;
+    margin-left: 80px;
     margin-top: 30px;
 }
 
@@ -66,7 +67,7 @@ header {
     display: flex;
     flex-direction: column;
     margin: 20px 50px;
-    width: 300px;
+    width: 200px;
 }
 
 .resultImg {
